Closed Bug 374167 Opened 17 years ago Closed 17 years ago

[FIX]ASSERTION: wasDirty lied: 'mDirtyRoots.IndexOf(f) == -1'

Categories

(Core :: Layout, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9alpha4

People

(Reporter: roc, Assigned: bzbarsky)

References

Details

Attachments

(2 files)

A current CVS Firefox debug build asserts opening a new window via
javascript:window.open("about:blank").  This is a reflow branch landing
regression.

This is a followup bug from bug 363253 which resolved some of these assertions by moving scrollframe attribute-setting out of reflow.

Salient comment from bz about the remaining work:
https://bugzilla.mozilla.org/show_bug.cgi?id=363253#c11

"For the rest, it seems to me that PresShell::StyleChangeReflow and
PresShell::ResizeReflow should clear mDirtyRoots at some point, no?

I also think we should add an assert that the frame we're adding to mDirtyRoots
is not currently in reflow; that should let us catch the scrollbar sort of
problem earlier."
Might as well wait till bug 370952 lands, then revisit this.
Depends on: 370952
At this point, it's asserting because ResizeReflow reflows the root frame but doesn't remove it from mDirtyRoots.  We should be doing that somewhere.
Attached patch Yes, indeedSplinter Review
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #262807 - Flags: superreview?(dbaron)
Attachment #262807 - Flags: review?(dbaron)
Priority: -- → P3
Summary: ASSERTION: wasDirty lied: 'mDirtyRoots.IndexOf(f) == -1' → [FIX]ASSERTION: wasDirty lied: 'mDirtyRoots.IndexOf(f) == -1'
Target Milestone: --- → mozilla1.9alpha4
Comment on attachment 262807 [details] [diff] [review]
Yes, indeed

You can't do it this way, since resizes get optimized away if there's no size change, so there could be dirty roots that don't get reached.

You should just remove the root frame from mDirtyRoots.
Attachment #262807 - Flags: superreview?(dbaron)
Attachment #262807 - Flags: superreview-
Attachment #262807 - Flags: review?(dbaron)
Attachment #262807 - Flags: review-
Attached patch Yeah, indeedSplinter Review
I missed us not setting the DIRTY flag on the root...
Attachment #262822 - Flags: superreview?(dbaron)
Attachment #262822 - Flags: review?(dbaron)
Comment on attachment 262822 [details] [diff] [review]
Yeah, indeed

r+sr=dbaron
Attachment #262822 - Flags: superreview?(dbaron)
Attachment #262822 - Flags: superreview+
Attachment #262822 - Flags: review?(dbaron)
Attachment #262822 - Flags: review+
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: