Remove the root from mDirtyRoots if we resize-reflow it, so that we don't getassertions about frame state not matching with whether the frame is inmDirtyRoots.  Bug 374167, r+sr=dbaron